<?xml version="1.0"?>
<package format="3">
  <name>ig_lio</name>
  <version>0.0.0</version>
  <description>The ig_lio package for ROS2</description>
  <maintainer email="kris@todo.todo">kris</maintainer>
  <license>TODO</license>
  <!-- Update or add the url tag according to your package repository or documentation -->
  <!-- <url type="website">http://wiki.ros.org/ig_lio</url> -->

  <!-- ROS2 uses ament as the build system instead of catkin -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Update dependencies for ROS2 -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>livox_ros_driver2</depend>
  <depend>tf2_ros</depend>
  <depend>nav_msgs</depend>
  <!-- Add any additional ROS2 dependencies your package might have -->

  <!-- If you use any messages or services that have their own packages, make sure to add them here as well -->
  <!-- Example: -->
  <!-- <depend>unique_identifier_msgs</depend> -->

  <!-- Livox ROS Driver dependency: Check if there's a ROS2 equivalent or how it's supported in ROS2 -->
  <!-- For example, if Livox now provides a ROS2 package named livox_ros2_driver, you would include it like this -->
  <!-- <exec_depend>livox_ros2_driver</exec_depend> -->

  <export>
    <!-- Export information, if needed, for other tools -->
  </export>
</package>
